--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						<li class="has-dropdown">
 							<a href="#">Projects</a>
 							<ul class="dropdown">
-								<li><a href="#">Netsah Society</a></li>
+								<li><a href="#">Dirty Heads Club</a></li>
 							</ul>
 						</li>
 						<li><a href="contact.html">Contact</a></li>
@@ -67,7 +67,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Hey, welcome to Moriah Labs</h1>
+							<h1>WEB 3 IS <del>NOT</del> THE FUTURE</h1>
 							<h2>We're creative technologists, we seek inspiration in a new world. Creators of Netsah Society NFTs</h2>
 						</div>
 					</div>
