--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>WEB 3 IS <del>NOT</del> THE FUTURE</h1>
-							<h2>We're creative technologists, we seek inspiration in a new world. Creators of Netsah Society NFTs</h2>
+							<h2>We make sure that all our community has to do is stay active. We're going to be creators of projects with increasingly high quality.</h2>
 						</div>
 					</div>
 				</div>
