--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 						<li class="has-dropdown">
 							<a href="#">Projects</a>
 							<ul class="dropdown">
-								<li><a href="#">Netsah Society</a></li>
+								<li><a href="#">Dirty Heads Club</a></li>
 							</ul>
 						</li>
 						<li><a href="contact.html">Contact</a></li>
@@ -66,8 +66,8 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>About Us</h1>
-							<h2>Moriah Labs’s mission is to accelerate the creation of Web3.</h2>
+							<h1>You should not be distracted by other projects.</h1>
+							<h2>Moriah Labs’s mission is to accelerate the creation of Web3. We will start with a simple project and the only thing you will have to do is be among the first and relax.</h2>
 						</div>
 					</div>
 				</div>
