--- a/contact.html
+++ b/contact.html
@@ -24,9 +24,6 @@
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	<!-- FOR IE9 below -->
-	<!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
-	<![endif]-->
 
 	</head>
 	<body>
@@ -48,7 +45,7 @@
 						<li class="has-dropdown">
 							<a href="#">Projects</a>
 							<ul class="dropdown">
-								<li><a href="#">Netsah Society</a></li>
+								<li><a href="#">Dity Heads Club</a></li>
 							</ul>
 						</li>
 						<li><a href="contact.html">Contact</a></li>
