--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Our Projects</h2>
-					<p>We work to empower the community.</p>
+					<p>Enjoy worry free project. Love web3 more and more.</p>
 				</div>
 			</div>
 		</div>
@@ -111,8 +111,8 @@
 			<div class="col-half">
 				<div class="project animate-box" style="background-image:url(images/netsah-society.jpg);">
 					<div class="desc">
-						<span>7,777 unique collectible</span>
-						<h3>Netsah Society</h3>
+						<span>5,757 unique collectible - Dirty But Tasty</span>
+						<h3>Dirty Heads Club</h3>
 					</div>
 				</div>
 			</div>
