--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
 						</div>
 					</div>
 					<div class="col-md-6 col-md-pull-6">
-						<img class="img-responsive" src="images/netsah-society.jpg" alt="about">
+						<img class="img-responsive" src="images/workers.jpg" alt="about">
 					</div>
 					
 				</div>
