--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 		</div>
 		<div class="project-content">
 			<div class="col-half">
-				<div class="project animate-box" style="background-image:url(images/netsah-society.jpg);">
+				<div class="project animate-box" style="background-image:url(images/dirtyheadsclub.jpg);">
 					<div class="desc">
 						<span>5,757 unique collectible - Dirty But Tasty</span>
 						<h3>Dirty Heads Club</h3>
