--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>WEB 3 IS <del style="color:red;">NOT</del> THE FUTURE</h1>
+							<h1>WEB 3 IS <span style="text-decoration: line-through; text-decoration-color: red;">NOT</del> THE FUTURE</h1>
 							<h2>We make sure that all our community has to do is stay active. <br>We're going to be creators of projects with increasingly high quality.</h2>
 						</div>
 					</div>
