--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 							<div class="desc">
 								<span>Moriah Labs</span>
 								<h3>How we work?</h3>
-								<p>We will start with a simple project and the only thing you will have to do is be among the first and relax.</p>
+								<p style="color: #ffa040;">We will start with a simple project and the only thing you will have to do is be among the first and relax.</p>
 								<p>We always seek determination, creativity, frankness, initiative, we greatly respect contradictory thinking.</p>
 								<p>Moriah Labs is a place of ambitious people, where we seek to overcome the imposed system, as well as improve ourselves as people.</p>
 							</div>
