--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 		</div>
 		<div class="project-content">
 			<div class="col-half">
-				<div class="project animate-box" style="background-image:url(images/dirty.png);">
+				<div class="project animate-box" style="background-image:url(images/dirty.png); background-size: 80%; background-position: center;">
 					<div class="desc">
 						<span>5,757 unique collectible - Dirty But Tasty</span>
 						<h3>Dirty Heads Club</h3>
