--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>You should not be distracted by other projects</h1>
+							<h1>DRIVEN WITH FOCUS</h1>
 							<h2>Moriah Labs’s mission is to accelerate the creation of Web3.</h2>
 						</div>
 					</div>
